--- a/notebooks/explore.ipynb
+++ b/notebooks/explore.ipynb
@@ -2,11 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'popgetter'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpoppusher\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01micecream\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ic\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n",
+      "File \u001b[0;32m~/code/urbananalytics/poppusher/python/poppusher/__init__.py:15\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIGNORE_EXPERIMENTAL_WARNINGS\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m os\u001b[38;5;241m.\u001b[39menviron:\n\u001b[1;32m     13\u001b[0m     warnings\u001b[38;5;241m.\u001b[39mfilterwarnings(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mignore\u001b[39m\u001b[38;5;124m\"\u001b[39m, category\u001b[38;5;241m=\u001b[39mExperimentalWarning)\n\u001b[0;32m---> 15\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpopgetter\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mio_managers\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mazure\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m     16\u001b[0m     AzureGeneralIOManager,\n\u001b[1;32m     17\u001b[0m     AzureGeoIOManager,\n\u001b[1;32m     18\u001b[0m     AzureMetadataIOManager,\n\u001b[1;32m     19\u001b[0m     AzureMetricsIOManager,\n\u001b[1;32m     20\u001b[0m     AzureMetricsMetadataIOManager,\n\u001b[1;32m     21\u001b[0m     AzureMetricsPartitionedIOManager,\n\u001b[1;32m     22\u001b[0m )\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpopgetter\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mio_managers\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlocal\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m     24\u001b[0m     LocalGeoIOManager,\n\u001b[1;32m     25\u001b[0m     LocalMetadataIOManager,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     28\u001b[0m     LocalMetricsPartitionedIOManager,\n\u001b[1;32m     29\u001b[0m )\n\u001b[1;32m     30\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpopgetter\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m StagingDirResource\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'popgetter'"
+     ]
+    }
+   ],
    "source": [
-    "import popgetter\n",
+    "import poppusher\n",
     "from icecream import ic\n",
     "import pandas as pd\n",
     "import re"
@@ -18,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "catalog: pd.DataFrame = popgetter.defs.load_asset_value([\"be\", \"catalog_as_dataframe\"])\n",
+    "catalog: pd.DataFrame = poppusher.defs.load_asset_value([\"be\", \"catalog_as_dataframe\"])\n",
     "\n",
     "geo_cat = catalog[\n",
     "    catalog[\"source_format\"].str.contains(\n",
@@ -44,35 +57,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-07-04 11:42:45 +0100 - dagster - DEBUG - system - Loading file from: /Users/a.smith/code/urbananalytics/popgetter/persist/storage/gbr/catalog using PickledObjectFilesystemIOManager...\n",
-      "ic| source_download_url: array(['https://www.nomisweb.co.uk/output/census/2021/census2021-ts001.zip'],\n",
-      "                               dtype=object)\n",
-      "ic| source_archive_file_path: 'census2021-ts001-oa.csv'\n",
-      "ic| source_download_url: array(['https://www.nomisweb.co.uk/output/census/2021/census2021-ts001.zip'],\n",
-      "                               dtype=object)\n",
-      "ic| source_archive_file_path: 'census2021-ts001-oa.csv'\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'census2021-ts001-oa.csv'"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "catalog: pd.DataFrame = popgetter.defs.load_asset_value([\"gbr\", \"catalog\"])\n",
+    "catalog: pd.DataFrame = poppusher.defs.load_asset_value([\"gbr\", \"catalog\"])\n",
     "\n",
     "# catalog.head(1).T\n",
     "\n",
@@ -97,7 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "geometry = popgetter.defs.load_asset_value(\n",
+    "geometry = poppusher.defs.load_asset_value(\n",
     "    [\"be\", \"individual_census_table\"], partition_key=\"https://statbel.fgov.be/node/4726\"\n",
     ")\n",
     "# Statistical sectors 2023\n",
@@ -127,49 +116,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ic| df.shape: (331, 312)\n",
-      "ic| list(range(5, 17)): [5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16]\n",
-      "ic| columns_to_sum: ['Sex: All persons; Age: Aged 5 years; measures: Value',\n",
-      "                     'Sex: All persons; Age: Aged 6 years; measures: Value',\n",
-      "                     'Sex: All persons; Age: Aged 7 years; measures: Value',\n",
-      "                     'Sex: All persons; Age: Aged 8 years; measures: Value',\n",
-      "                     'Sex: All persons; Age: Aged 9 years; measures: Value',\n",
-      "                     'Sex: All persons; Age: Aged 10 years; measures: Value',\n",
-      "                     'Sex: All persons; Age: Aged 11 years; measures: Value',\n",
-      "                     'Sex: All persons; Age: Aged 12 years; measures: Value',\n",
-      "                     'Sex: All persons; Age: Aged 13 years; measures: Value',\n",
-      "                     'Sex: All persons; Age: Aged 14 years; measures: Value',\n",
-      "                     'Sex: All persons; Age: Aged 15 years; measures: Value',\n",
-      "                     'Sex: All persons; Age: Aged 16 years; measures: Value',\n",
-      "                     'Sex: All persons; Age: Aged 17 years; measures: Value']\n",
-      "ic| new_table.shape: (331, 4)\n",
-      "ic| new_table.head():    date             geography geography code  new_col\n",
-      "                      0  2021            Hartlepool      E06000001    14847\n",
-      "                      1  2021         Middlesbrough      E06000002    24540\n",
-      "                      2  2021  Redcar and Cleveland      E06000003    20440\n",
-      "                      3  2021      Stockton-on-Tees      E06000004    32528\n",
-      "                      4  2021            Darlington      E06000005    16739\n",
-      "ic| new_table.columns: Index(['date', 'geography', 'geography code', 'new_col'], dtype='object')\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Index(['date', 'geography', 'geography code', 'new_col'], dtype='object')"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test aggregation of census2021-ts009-ltla\n",
     "\n",
@@ -225,27 +174,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ic| l: ['z', 'a', 'b', 'c']\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['z', 'a', 'b', 'c']"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "d = {\"a\": 1, \"b\": 2, \"c\": 3}\n",
     "\n",
@@ -255,19 +186,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "abc\n",
-      "defghi\n",
-      "jklmnopqrstuvwxyz\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Understanding partials\n",
     "\n",
@@ -320,129 +241,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-07-04 20:31:03 +0100 - dagster - DEBUG - system - Loading file from: /Users/a.smith/code/urbananalytics/popgetter/persist/storage/gbr/census_tables/ltla/TS009 using PickledObjectFilesystemIOManager...\n",
-      "ic| type(derived): <class 'pandas.core.frame.DataFrame'>\n",
-      "ic| derived.head(1).T:                                                              0\n",
-      "                       date                                                      2021\n",
-      "                       geography                                           Hartlepool\n",
-      "                       geography code                                       E06000001\n",
-      "                       Sex: All persons; Age: Total; measures: Value            92347\n",
-      "                       Sex: All persons; Age: Aged 4 years and under; ...        4981\n",
-      "                       ...                                                        ...\n",
-      "                       Sex: Male; Age: Aged 86 years; measures: Value             122\n",
-      "                       Sex: Male; Age: Aged 87 years; measures: Value             122\n",
-      "                       Sex: Male; Age: Aged 88 years; measures: Value             101\n",
-      "                       Sex: Male; Age: Aged 89 years; measures: Value              81\n",
-      "                       Sex: Male; Age: Aged 90 years and over; measure...         217\n",
-      "                       \n",
-      "                       [312 rows x 1 columns]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>date</th>\n",
-       "      <td>2021</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>geography</th>\n",
-       "      <td>Hartlepool</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>geography code</th>\n",
-       "      <td>E06000001</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Sex: All persons; Age: Total; measures: Value</th>\n",
-       "      <td>92347</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Sex: All persons; Age: Aged 4 years and under; measures: Value</th>\n",
-       "      <td>4981</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Sex: Male; Age: Aged 86 years; measures: Value</th>\n",
-       "      <td>122</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Sex: Male; Age: Aged 87 years; measures: Value</th>\n",
-       "      <td>122</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Sex: Male; Age: Aged 88 years; measures: Value</th>\n",
-       "      <td>101</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Sex: Male; Age: Aged 89 years; measures: Value</th>\n",
-       "      <td>81</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Sex: Male; Age: Aged 90 years and over; measures: Value</th>\n",
-       "      <td>217</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>312 rows × 1 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                             0\n",
-       "date                                                      2021\n",
-       "geography                                           Hartlepool\n",
-       "geography code                                       E06000001\n",
-       "Sex: All persons; Age: Total; measures: Value            92347\n",
-       "Sex: All persons; Age: Aged 4 years and under; ...        4981\n",
-       "...                                                        ...\n",
-       "Sex: Male; Age: Aged 86 years; measures: Value             122\n",
-       "Sex: Male; Age: Aged 87 years; measures: Value             122\n",
-       "Sex: Male; Age: Aged 88 years; measures: Value             101\n",
-       "Sex: Male; Age: Aged 89 years; measures: Value              81\n",
-       "Sex: Male; Age: Aged 90 years and over; measure...         217\n",
-       "\n",
-       "[312 rows x 1 columns]"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "derived = popgetter.defs.load_asset_value(\n",
+    "derived = poppusher.defs.load_asset_value(\n",
     "    [\"gbr\", \"census_tables\"], partition_key=\"ltla/TS009\"\n",
     ")\n",
     "\n",
@@ -455,7 +258,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "popget-dev",
+   "display_name": "popgetter-3.12",
    "language": "python",
    "name": "python3"
   },
